[tool.poetry]
name = "stress-coach"
version = "0.1.0"
description = ""
authors = ["samcloudcode <samstitt@gmail.com>"]
readme = "README.md"
packages = [{include = "stress_coach"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
openai = "^0.27.10"
markdown = "^3.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
